<resources>
    <string name="app_name">AutoQuest</string>
    <string name="questDescription">Опис квесту</string>
    <string name="timeQuest">Час проведення:</string>
    <string name="dateQuest">Дата проведення:</string>
    <string name="registerTxtBtn">реєстрація</string>
    <string name="title">New quest</string>
    <string name="your_web_client_id">841402547245-72rtaut9okilduplvh8k14omn1uq752i.apps.googleusercontent.com</string>
    <string name="data_quest">Дата проведення:</string>
    <string name="time_quest">Час проведення:</string>
    <string name="rating">/10</string>
    <string name="take_part">Прийняти участь</string>
    <string name="consent">Ви дали згоду на участь в квесті</string>
    <string name="error_txt">Error not found</string>
    <string name="title_dialog">Підтвердження</string>
    <string name="messege_dialog">Ви дійсно хочете прийняти участь ?</string>
    <string name="positive_btn_txt_dialog">Так</string>
    <string name="negative_btn_txt_dialog">Ні</string>
    <string name="map_txt_title">Направляйтесь на вказану точку</string>
    <string name="map_btn_txt">Прокласти маршрут</string>
    <string name="auto_quest">Auto Quest</string>
    <string name="only_favorite">тільки обрані</string>
    <string name="all">усі</string>
    <string name="time_txt">Час до початку квеста</string>
    <string name="Enter_code_txt">Введіть код доступу</string>
    <string name="Good">Підтвердити</string>
    <string name="signin">SignIn</string>
    <string name="facebook_sign">facebook sign</string>
    <string name="participate_btn_txt">Прийняти участь</string>
    <string name="enter_answer_txt">введіть відповідь</string>
    <string name="btn_chek_txt">Перевірити</string>
    <string name="title_exit_dialog">Вихід</string>
    <string name="messege_exit_dialog">Ви дійсно хочете вийти ?</string>
    <string name="signout">signOut</string>
    <string name="username">UserName</string>
    <string name="messege_dialog_signout">Ви дісно хочете вийти ?</string>
    <string name="text_permission">Ця програма не може працювати без дозволу на місцезнаходження.</string>
    <string name="user_frag_txt">Квести в яких ви приймали участь:</string>
    <string name="result_quest_txt">Результати квесту</string>
</resources>