<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/listFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center"
            android:text="@string/auto_quest"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/onlyFavoritesFilterBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/only_favorite" />

            <Button
                android:id="@+id/allQuestsFilterBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/all" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listOfFragRv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/registerTxtBtn" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>