<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mapLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/questTaskText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/map_txt_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <fragment
            android:id="@+id/map_fragment"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/questTaskFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/questTaskImg"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/taskText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp" />

        <EditText
            android:id="@+id/editUserAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_answer_txt"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp" />

        <Button
            android:id="@+id/checkAnswerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/btn_chek_txt" />

    </LinearLayout>


</LinearLayout>